# task_for_comp_5

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 20260425_0001_init.py  20260425_0002_processed_events.py
core/: api.py  main.py  schemas.py  worker.py
landings/: api.py  main.py  schemas.py
shared/: bootstrap.py  db.py  models.py  security.py
